--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <form id="emailForm">
 
             <label for="email">Email*</label>
-            <input type="text" id="emailInput" required><br><br>
+            <input type="email" id="emailInput" required><br><br>
 
             <label for="cc">CC (optional)</label>
-            <input type="text" id="cc"><br><br>
+            <input type="email" id="cc"><br><br>
 
             <label for="load">Load ID*</label>
             <input type="text" id="load" required><br><br>   
@@ -28,7 +28,7 @@
             <input type="text" id="origin" required><br><br>
 
             <label for="destination">Destination*</label>
-            <input type="text" id="destination" required><br><br>
+            <input type="text" id="destination" required><br>
 
             <label for="pu-del"></label>
             
@@ -54,8 +54,7 @@
 
         </form>
         <div id="two">
-        </span>
-    </div>
+        </div>
     
     <script type="text/javascript" src="main.js"></script>
 </body>
