--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template generator</title>
+    <title>Draft Generator</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="icon" type="image/png" href="./coding.png">
+
 </head>
 <body>
     <img src="./jbhunt.png" id="jbh"> <img src="./truck.png" id="truck">
@@ -13,49 +15,44 @@
         <form id="emailForm">
 
             <label for="email">Email*</label>
-            <input type="email" id="emailInput" required><br><br>
+            <input type="email" id="emailInput" placeholder=" Recipient's Email Address" required><br><br>
 
             <label for="cc">CC (optional)</label>
-            <input type="email" id="cc"><br><br>
+            <input type="email" id="cc" placeholder=" Carbon Copy"><br><br>
 
             <label for="load">Load ID*</label>
-            <input type="text" id="load" required><br><br>   
+            <input type="text" id="load" placeholder=" Load ID" required><br><br>   
 
             <label for="customer">Customer name*</label>
-            <input type="text" id="customer" required><br><br>
+            <input type="text" id="customer" placeholder=" Customer's Name" required><br><br>
 
             <label for="origin">Origin*</label>
-            <input type="text" id="origin" required><br><br>
+            <input type="text" id="origin" placeholder=" Origin" required><br><br>
 
             <label for="destination">Destination*</label>
-            <input type="text" id="destination" required><br>
+            <input type="text" id="destination" placeholder=" Destination" required>
 
             <label for="pu-del"></label>
             
 <div>
   <input type="radio" id="pick-up" name="pudel" value="pickup" checked>
-  <label for="pick-up">Pick up</label>
-</div>
+  <label for="pick-up">Pick up</label><br>
 
-<div>
   <input type="radio" id="delivery" name="pudel" value="delivery">
-  <label for="delivery">Delivery</label><br><br>
+  <label for="delivery">Delivery</label>
 </div>
 <div id="three">
     <label for="pudate">Pickup date/time*</label>
-    <input type="text" id="pudate" required><br><br>
+    <input type="text" id="pudate" placeholder=" Pickup Date & Time" required><br><br>
 
     <label for="deldate">Delivery date/time*</label>
-    <input type="text" id="deldate" required><br><br>
+    <input type="text" id="deldate" placeholder=" Delivery Date & Time" required><br>
 </div>
-
+<div id="four">
     <label for="btn" name="submit"></label>
-    <input type="submit" id="btn" name="submit" value="Create">
-
+    <input type="submit" id="btn" name="submit" value="Submit">
+</div>
         </form>
-        <div id="two">
-        </div>
-    
     <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
