--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Draft Generator</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="icon" type="image/png" href="./coding.png">
+    <link rel="icon" type="image" href="./science.png">
 
 </head>
 <body>
@@ -18,7 +18,7 @@
             <input type="email" id="emailInput" placeholder=" Recipient's Email Address" required><br><br>
 
             <label for="cc">CC (optional)</label>
-            <input type="email" id="cc" placeholder=" Carbon Copy"><br><br>
+            <input type="email" id="cc" placeholder=" C. Copy (Email Address)"><br><br>
 
             <label for="load">Load ID*</label>
             <input type="text" id="load" placeholder=" Load ID" required><br><br>   
