--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <label for="load">Load ID*</label>
             <input type="text" id="load" placeholder=" Load ID" required><br><br>   
 
-            <label for="customer">Customer name*</label>
+            <label for="customer">Customer*</label>
             <input type="text" id="customer" placeholder=" Customer's Name" required><br><br>
 
             <label for="origin">Origin*</label>
