--- a/index.html
+++ b/index.html
@@ -14,40 +14,37 @@
     <div id="one">
         <form id="emailForm">
 
-            <label for="email">Email*</label>
+            <label for="email">*</label>
             <input type="email" id="emailInput" placeholder=" Recipient's Email Address" required><br><br>
 
-            <label for="cc">CC (optional)</label>
-            <input type="email" id="cc" placeholder=" C. Copy (Email Address)"><br><br>
+            <label for="cc">(optional)</label>
+            <input type="email" id="cc" placeholder=" CC (Email Address)"><br><br>
 
-            <label for="load">Load ID*</label>
+            <label for="load">*</label>
             <input type="text" id="load" placeholder=" Load ID" required><br><br>   
 
-            <label for="customer">Customer*</label>
+            <label for="customer">*</label>
             <input type="text" id="customer" placeholder=" Customer's Name" required><br><br>
 
-            <label for="origin">Origin*</label>
+            <label for="origin">*</label>
             <input type="text" id="origin" placeholder=" Origin" required><br><br>
 
-            <label for="destination">Destination*</label>
-            <input type="text" id="destination" placeholder=" Destination" required>
+            <label for="destination">*</label>
+            <input type="text" id="destination" placeholder=" Destination" required><br><br>
 
-            <label for="pu-del"></label>
-            
-<div>
-  <input type="radio" id="pick-up" name="pudel" value="pickup" checked>
-  <label for="pick-up">Pick up</label><br>
+            <label for="pudate">*</label>
+            <input type="text" id="pudate" placeholder=" Pickup Date & Time" required><br><br>
 
-  <input type="radio" id="delivery" name="pudel" value="delivery">
-  <label for="delivery">Delivery</label>
-</div>
+            <label for="deldate">*</label>
+            <input type="text" id="deldate" placeholder=" Delivery Date & Time" required><br><br>
+
 <div id="three">
-    <label for="pudate">Pickup date/time*</label>
-    <input type="text" id="pudate" placeholder=" Pickup Date & Time" required><br><br>
-
-    <label for="deldate">Delivery date/time*</label>
-    <input type="text" id="deldate" placeholder=" Delivery Date & Time" required><br>
-</div>
+    <input type="radio" id="pick-up" name="pudel" value="pickup" checked>
+    <label for="pick-up"> Pick up</label><br>
+  
+    <input type="radio" id="delivery" name="pudel" value="delivery">
+    <label for="delivery">Delivery</label>
+  </div>
 <div id="four">
     <label for="btn" name="submit"></label>
     <input type="submit" id="btn" name="submit" value="Submit">
