--- a/index.html
+++ b/index.html
@@ -36,14 +36,13 @@
             <input type="text" id="pudate" placeholder=" Pickup Date & Time" required><br><br>
 
             <label for="deldate">*</label>
-            <input type="text" id="deldate" placeholder=" Delivery Date & Time" required><br><br>
+            <input type="text" id="deldate" placeholder=" Delivery Date & Time" required><br>
 
 <div id="three">
-    <input type="radio" name="pudel" id="pu" value="pickup" checked>
-    <label for="pickup" id="pickup">Pickup</label><br>
-  
-    <input type="radio" name="pudel" id="del" value="delivery">
-    <label for="delivery" id="delivery">Delivery</label>
+    <label for="pudel" name="pudel"><br>
+        <input type="radio" name="pudel" id="pu" value="pickup" checked>Pickup<br>
+        <input type="radio" name="pudel" id="del" value="delivery">Delivery
+    </label>
   </div>
 <div id="four">
     <label for="btn" name="submit"></label>
