--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <input type="email" id="emailInput" placeholder=" Recipient's Email Address" required><br><br>
 
             <label for="cc" id="optional">(optional)</label>
-            <input type="email" id="cc" placeholder=" CC (Email Address)"><br><br>
+            <input type="email" id="cc" placeholder=" CC "><br><br>
 
             <label for="load">*</label>
             <input type="text" id="load" placeholder=" Load ID" required><br><br>   
