--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <input type="text" id="deldate" placeholder=" Delivery Date & Time" required><br>
 
 <div id="three">
-    <label for="pudel" name="pudel"><br>
+    <label for="pudel" name="pudel" id="rlabel"><br>
         <input type="radio" name="pudel" id="pu" value="pickup" checked>Pickup<br>
         <input type="radio" name="pudel" id="del" value="delivery">Delivery
     </label>
