removed customer from subject

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <input type="text" id="load" placeholder=" Load ID" required><br><br>   
 
             <label for="customer">*</label>
-            <input type="text" id="customer" placeholder=" Customer's Name" required><br><br>
+            <input type="text" id="customer" placeholder=" Customer" required><br><br>
 
             <label for="origin">*</label>
             <input type="text" id="origin" placeholder=" Origin" required><br><br>
