load number placeholder

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 </head>
 <body>
-    <img src="./jbhunt.png" id="jbh"> <img src="./truck.png" id="truck">
+    
     <div id="one">
+        <img src="./jbhunt.png" id="jbh">
         <form id="emailForm">
 
             <label for="email">*</label>
@@ -21,7 +22,7 @@
             <input type="email" id="cc" placeholder=" CC "><br><br>
 
             <label for="load">*</label>
-            <input type="text" id="load" placeholder=" Load ID" required><br><br>   
+            <input type="text" id="load" placeholder=" Load Number" required><br><br>   
 
             <label for="customer">*</label>
             <input type="text" id="customer" placeholder=" Customer" required><br><br>
@@ -37,7 +38,7 @@
 
             <label for="deldate">*</label>
             <input type="text" id="deldate" placeholder=" Delivery Date & Time" required><br>
-
+        
 <div id="three">
     <label for="pudel" name="pudel" id="rlabel"><br>
         <input type="radio" name="pudel" id="pu" value="pickup" checked>Pickup<br>
@@ -48,6 +49,12 @@
     <label for="btn" name="submit"></label>
     <input type="submit" id="btn" name="submit" value="Submit">
 </div>
+</div><br><br>
+<div id="foot">
+    <footer>***Do not use this tool for escalations!***</footer>
+</div>
+
+
         </form>
     <script type="text/javascript" src="main.js"></script>
 </body>
