--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <label for="email">*</label>
             <input type="email" id="emailInput" placeholder=" Recipient's Email Address" required><br><br>
 
-            <label for="cc" id="optional">(optional)</label>
-            <input type="email" id="cc" placeholder=" CC "><br><br>
+            <label for="cc" id="optional"></label>
+            <input type="email" id="cc" placeholder=" CC (Optional) "><br><br>
 
             <label for="load">*</label>
             <input type="text" id="load" placeholder=" Load Number" required><br><br>   
