--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
 <div id="three">
     <label for="pudel" name="pudel" id="rlabel"><br>
         <input type="radio" name="pudel" id="pu" value="pickup" checked>Pickup<br>
-        <input type="radio" name="pudel" id="del" value="delivery">Delivery
+        <input type="radio" name="pudel" id="del" value="delivery">Delivery<br>
+        <input type="radio" name="pudel" id="other" value="other">Other
     </label>
+<div id="five"></div>    
   </div>
 <div id="four">
     <label for="btn" name="submit"></label>
