--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Draft generator for JBH">
+    <meta name="keywords" content="irons4life, draft generator, jbh"></meta>
     <title>Draft Generator</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
     <link rel="icon" type="image" href="./science.png">
