--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </div>
 </div><br><br>
 <div id="foot">
-    <footer>***Do not use this tool for escalations!***</footer>
+    <footer>Do not use this tool for escalations!</footer>
 </div>
 
 
