--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 
 </head>
 <body>
-    
+    <div id="spacing"></div>
     <div id="container">
-        <img src="./jbhunt.png" id="jbh">
+        <div id="img">
+            <img src="./jbhunt.png" id="jbh">
+        </div>
         <form id="emailForm">
 
             <label for="email"></label>
@@ -67,4 +69,3 @@
     <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
-
