--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
             <label for="deldate"></label>
             <input type="text" id="deldate" placeholder=" Delivery Date & Time" required><br>
 
-            <div id="box">
-                <textarea name="" id="ta" cols="6" rows="3" placeholder="Add comments (optional)"></textarea>
-            </div> 
+                <textarea id="ta" cols="8" rows="3" placeholder=" Comments (optional)"></textarea> 
             <div id="two">
                 <label for="pickup" name="pudel" class="pudel">
                     <input type="radio" name="pudel" class="pudel" value="pickup" checked>Pickup
