all issues fixed

--- a/index.html
+++ b/index.html
@@ -47,12 +47,11 @@
             <label for="delivery" name="pudel" class="pudel">    
             <input type="radio" name="pudel" class="pudel" value="delivery">Delivery<br>
             </label><span></span>
-            <label for="btn" name="submit"></label>
-            <input type="submit" id="btn" name="submit" value="Submit">
-        
+
+            <label for="btn" name="Submit"></label>
+            <input type="submit" id="btn" name="Submit" value="Submit">
         </form>
     </div><br><br>
-        
     <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
